--- a/static/html/sign/signup.html
+++ b/static/html/sign/signup.html
@@ -35,13 +35,8 @@
                             </div>
                             <form id="ownerSign" class="tab-content">
                                 <div class="txt_field">
-                                    <input type="text" name="userEmail" id="email" required>
+                                    <input type="text" name="userEmail" required>
                                     <label>e-mail</label>
-                                    <select name="domain" id="domainSelect" onchange="changeDomain()">
-                                        <option value="direct">직접입력</option>
-                                        <option value="gmail.com">gmail.com</option>
-                                        <option value="naver.com">naver.com</option>
-                                    </select>
                                 </div>
                                 <div class="txt_field">
                                     <input type="password" name="userPw" required>
@@ -66,13 +61,8 @@
                             </form>
                             <form class="tab-content" id="sitterSign">
                                 <div class="txt_field">
-                                    <input type="text" name="userEmail" id="email" required>
+                                    <input type="text" name="userEmail"required>
                                     <label>e-mail</label>
-                                    <select name="domain" id="domainSelect" onchange="changeDomain()">
-                                        <option value="direct">직접입력</option>
-                                        <option value="gmail.com">gmail.com</option>
-                                        <option value="naver.com">naver.com</option>
-                                    </select>
                                 </div>
                                 <div class="txt_field">
                                     <input type="password" name="userPw" required>
