--- a/static/html/mypage/sitterpage.html
+++ b/static/html/mypage/sitterpage.html
@@ -7,9 +7,9 @@
     <script src="/js/link.js" defer></script>
     <title>Document</title>
     <!-- css -->
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../../css/header.css" />
+    <link rel="stylesheet" href="../../css/footer.css" />
   </head>
 
   <body>
