--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -1,79 +1,200 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- link -->
-    <script src="/js/link.js" defer></script>
-    <title>Document</title>
-    <!-- css -->
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
-  </head>
 
-  <body>
-    <div class="wrapper">
-      <!-- 헤더영역 (템플릿화 예정) -->
-      <div class="header">
-        <div class="logo">
-          <span><a href="#">LOGO</a></span>
-        </div>
-        <div class="menu">
-          <ul>
-            <li class="menu-service">
-              <a href="#">Service</a>
-              <ul class="sub-menu">
-                <li class="sub-item"><a href="#">Day Care</a></li>
-                <li class="sub-item"><a href="#">Hotelling</a></li>
-                <li class="sub-item"><a href="#">work with pet</a></li>
-              </ul>
-            </li>
-            <li><a href="#">place</a></li>
-            <li><a href="#">board</a></li>
-          </ul>
-        </div>
-        <div class="sign">
-          <button class="sign-in btn">
-            <a href="/html/sign/login.html">로그인</a>
-          </button>
-          <button class="sign-up btn">
-            <a href="/html/sign/signup.html">회원가입</a>
-          </button>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- link -->
+  <script src="/js/link.js" defer></script>
+  <title>Document</title>
+  <!-- css -->
+  <link rel="stylesheet" href="../../css/style.css" />
+  <link rel="stylesheet" href="../../css/header.css" />
+  <link rel="stylesheet" href="../../css/footer.css" />
+  <link rel="stylesheet" href="../../css/mypage/ownerpage.css" />
+</head>
+
+<body>
+  <div class="wrapper">
+    <!-- 헤더영역 (템플릿화 예정) -->
+    <div class="header">
+      <div class="logo">
+        <span><a href="#">LOGO</a></span>
       </div>
-      <!-- 메인영역 -->
-      <div class="main">
-        <!-- pagew 1260px -->
-        <div class="pagew">
-          <!-- 작업 영역 -->
-          <div class="content">
-            <div class="wrapper">
-              <div class="main">
-                <div class="produce">
-                  <div class="name">
-                    <span>hola! OOO</span>
-                    <a href="">반려동물 : </a>
-                  </div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                </div>
-                <div class="reserve"></div>
-                <div class="profil"></div>
-                <div class="sitter"></div>
+      <div class="menu">
+        <ul>
+          <li class="menu-service">
+            <a href="#">Service</a>
+            <ul class="sub-menu">
+              <li class="sub-item"><a href="#">Day Care</a></li>
+              <li class="sub-item"><a href="#">Hotelling</a></li>
+              <li class="sub-item"><a href="#">work with pet</a></li>
+            </ul>
+          </li>
+          <li><a href="#">place</a></li>
+          <li><a href="#">board</a></li>
+        </ul>
+      </div>
+      <div class="sign">
+        <button class="sign-in btn">
+          <a href="/html/sign/login.html">로그인</a>
+        </button>
+        <button class="sign-up btn">
+          <a href="/html/sign/signup.html">회원가입</a>
+        </button>
+      </div>
+    </div>
+    <!-- 메인영역 -->
+    <div class="main">
+      <!-- pagew 1260px -->
+      <div class="pagew">
+        <!-- 작업 영역 -->
+        <div class="content">
+          <div class="produce">
+            <div class="name">
+              <img src="" alt="">
+              <span>안녕하세요, OOO님!</span>
+              <ul>
+                <li> 오늘도 반려견과 행복한 하루 되세요 </li>
+              </ul>
+            </div>
+            <div class="pet">
+              <a href=""></a>
+              <span>반려동물 : 2마리</span>
+            </div>
+            <div class="review">
+              <span>작성한 리뷰 : *건</span>
+            </div>
+            <div class="reserving">
+              <span>진행 중인 예약 : *건</span>
+            </div>
+            <div class="payment-amount">
+              <span>누적 이용 금액 : *원</span>
+            </div>
+            <div class="btn">
+              <div class="pro-setting">
+                <a href="">프로필 관리</a>
+              </div>
+              <div class="pay-amount">
+                <a href="">결제 내역</a>
+              </div>
+            </div>
+
+          </div>
+          <div class="reserve">
+            <div class="reserv">
+              <span>진행중인 예약</span>
+              <ul>
+                <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
+              </ul>
+            </div>
+            <div class="res1">
+              <ul>
+                <li>호텔링</li>
+                <li>예약 확정</li>
+              </ul>
+              <div class="schedule1">
+                <span>2025-05-12 ~ 2025-05-15</span>
+              </div>
+              <div class="na1">
+                OOO시터
+              </div>
+              <div class="price1">
+                120,000원
+              </div>
+              <div class="chart1">
+                <a href="">채팅하기</a>
+              </div>
+              <div class="view1">
+                <a href="">상세보기</a>
+              </div>
+            </div>
+            <div class="res2">
+                <ul>
+                  <li>산책</li>
+                  <li>예약 확정</li>
+                </ul>
+              <div class="schedule2">
+                <span>2025-05-12 ~ 2025-05-15</span>
+              </div>
+              <div class="na2">
+                OOO시터
+              </div>
+              <div class="price2">
+                25,000원
+              </div>
+              <div class="chart2">
+                <a href="">채팅하기</a>
+              </div>
+              <div class="view2">
+                <a href="">상세보기</a>
+              </div>
+            </div>
+            <div class="allres">
+              <span>모든 예약 내역 보기</span>
+            </div>
+          </div>
+          <div class="profil">
+            <div class="">
+              <div class="pet-prof">
+                <span>반려동물 프로필</span>
+                <ul>
+                  <li>등록된 반려동물 정보입니다.</li>
+                </ul>
+                <a href="javascript:void(0)">관리</a>
+              </div>
+              <div class="pro1">
+                <img src="" alt="">
+                <ul>
+                  <li>이름</li>
+                  <li>포메라니안 / 2세 / 3.5KG</li>
+                </ul>
+              </div>
+              <div class="pro2">
+                <img src="" alt="">
+                <ul>
+                  <li>이름</li>
+                  <li>골든두들 / 4세 / 25KG</li>
+                </ul>
               </div>
             </div>
           </div>
+          <div class="sitter">
+            <div class="sitter-used">
+              <span>최근 이용한 시터</span>
+              <ul>
+                <li>최근에 이용한 펫시터 목록입니다.</li>
+              </ul>
+            </div>
+            <div class="sit-name1">
+              <img src="" alt="">
+              <ul>
+                <li>이름</li>
+                <li>4.8점</li>
+                <li>호텔링,산책</li>
+                <li>2025-03-14 이용</li>
+              </ul>
+            </div>
+            <div class="sit-name2">
+              <img src="" alt="">
+              <ul>
+                <li>이름</li>
+                <li>3.9점</li>
+                <li>호텔링,산책</li>
+                <li>2025-04-19 이용</li>
+              </ul>
+            </div>
+            <a href="javascript:void(0)">새 예약하기</a>
+          </div>
         </div>
       </div>
-      <!-- footer영역(템플릿화 예정) -->
-      <div class="footer">
-        <span>footer</span>
-      </div>
     </div>
-  </body>
+  </div>
+  <!-- footer영역(템플릿화 예정) -->
+  <div class="footer">
+    <span>footer</span>
+  </div>
+  </div>
+</body>
+
 </html>
