--- a/static/html/mainPage/mainPage.html
+++ b/static/html/mainPage/mainPage.html
@@ -5,21 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- link -->
-  <script src="../../js/link.js" defer></script>
+  <script src="/static//js/link.js" defer></script>
+  <script src="/static/js/mainPage.js" defer></script>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="../../js/mainPage.js" defer></script>
 
   <title>Document</title>
   <!-- css -->
-  <link rel="stylesheet" href="../../css/style.css">
-  <link rel="stylesheet" href="../../css/header.css">
-  <link rel="stylesheet" href="../../css/footer.css">
-  <link rel="stylesheet" href="../../css/mainPage.css">
+  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/header.css">
+  <link rel="stylesheet" href="/static/css/footer.css">
+  <link rel="stylesheet" href="/static/css/mainPage.css">
 </head>
 
 <body>
@@ -123,13 +123,11 @@
         </div>
         <div class="rank">
           <h2>이달의 베스트 시터</h2>
-          <canvas id="bar-chart-horizontal" width="600" height="250"></canvas>
         </div>
       </div>
     </div>
     <!-- footer영역(템플릿화 예정) -->
-    <div class="footer">
-      <span>footer</span>
+    <div id="footerContainer">
     </div>
   </div>
 
