--- a/static/html/mainPage/mainPage.html
+++ b/static/html/mainPage/mainPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- link -->
-  <script src="/static//js/link.js" defer></script>
+  <script src="../../js/link.js" defer></script>
   <script src="/static/js/mainPage.js" defer></script>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -25,7 +25,7 @@
 <body>
   <div class="wrapper">
     <!-- 헤더영역 (템플릿화 예정) -->
-    <div class="header">
+    <div id="headerContainer">
       <div class="logo">
         <span><a href="#">LOGO</a></span>
       </div>
