--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -50,6 +50,7 @@
       <div class="pagew">
         <!-- 작업 영역 -->
         <div class="content">
+          <!-- chart1 -->
           <div class="produce">
             <div class="name">
               <img src="" alt="">
@@ -79,7 +80,7 @@
                 <a href="">결제 내역</a>
               </div>
             </div>
-
+            <!-- chart2 -->
           </div>
           <div class="reserve">
             <div class="reserv">
@@ -118,6 +119,7 @@
                 <span>2025-05-12 ~ 2025-05-15</span>
               </div>
               <div class="na2">
+                <img>
                 OOO시터
               </div>
               <div class="price2">
@@ -134,15 +136,17 @@
               <span>모든 예약 내역 보기</span>
             </div>
           </div>
-          <div class="profil">
-            <div class="">
+          <!-- chart3 -->
+          <div class="all-pro">
+            <div class="profil">
               <div class="pet-prof">
                 <span>반려동물 프로필</span>
                 <ul>
                   <li>등록된 반려동물 정보입니다.</li>
                 </ul>
-                <a href="javascript:void(0)">관리</a>
-              </div>
+                <div class="care">
+                  <a href="">관리</a>
+                </div>
               <div class="pro1">
                 <img src="" alt="">
                 <ul>
@@ -157,34 +161,39 @@
                   <li>골든두들 / 4세 / 25KG</li>
                 </ul>
               </div>
+              </div>
             </div>
-          </div>
-          <div class="sitter">
-            <div class="sitter-used">
-              <span>최근 이용한 시터</span>
-              <ul>
-                <li>최근에 이용한 펫시터 목록입니다.</li>
-              </ul>
+            <div class="sitter">
+              <div class="sit-used">
+                <span>최근 이용한 시터</span>
+                <ul>
+                  <li>최근에 이용한 펫시터 목록입니다.</li>
+                </ul>
+              </div>
+              <div class="sit-name1">
+                <img src="" alt="">
+                <ul>
+                  <li>이름</li>
+                  <li>4.8점</li>
+                  <li>호텔링,산책</li>
+                  <li>2025-03-14 이용</li>
+                </ul>
+                <a href="">채팅</a>
+              </div>
+              <div class="sit-name2">
+                <img src="" alt="">
+                <ul>
+                  <li>이름</li>
+                  <li>3.9점</li>
+                  <li>호텔링,산책</li>
+                  <li>2025-04-19 이용</li>
+                </ul>
+                <a href="">채팅</a>
+              </div>
+              <div class="res3">
+                <a href="">새 예약하기</a>
+              </div>
             </div>
-            <div class="sit-name1">
-              <img src="" alt="">
-              <ul>
-                <li>이름</li>
-                <li>4.8점</li>
-                <li>호텔링,산책</li>
-                <li>2025-03-14 이용</li>
-              </ul>
-            </div>
-            <div class="sit-name2">
-              <img src="" alt="">
-              <ul>
-                <li>이름</li>
-                <li>3.9점</li>
-                <li>호텔링,산책</li>
-                <li>2025-04-19 이용</li>
-              </ul>
-            </div>
-            <a href="javascript:void(0)">새 예약하기</a>
           </div>
         </div>
       </div>
