--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="../../css/header.css" />
   <link rel="stylesheet" href="../../css/footer.css" />
   <link rel="stylesheet" href="../../css/mypage/ownerpage.css" />
+
+  <!-- goole icon -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -53,23 +56,34 @@
           <!-- chart1 -->
           <div class="produce">
             <div class="name">
-              <img src="" alt="">
+              <img src="../../asset/1.jpg">
               <span>안녕하세요, OOO님!</span>
               <ul>
                 <li> 오늘도 반려견과 행복한 하루 되세요 </li>
               </ul>
             </div>
             <div class="pet">
-              <a href=""></a>
+              <span class="material-symbols-outlined" style="font-size: 15px;">
+                pets
+                </span>
               <span>반려동물 : 2마리</span>
             </div>
             <div class="review">
+              <span class="material-symbols-outlined" style="font-size: 18px;">
+                star
+                </span>
               <span>작성한 리뷰 : *건</span>
             </div>
             <div class="reserving">
+              <span class="material-symbols-outlined" style="font-size: 15px;">
+                calendar_today
+                </span>
               <span>진행 중인 예약 : *건</span>
             </div>
             <div class="payment-amount">
+              <span class="material-symbols-outlined" style="font-size: 15px;">
+                credit_card
+                </span>
               <span>누적 이용 금액 : *원</span>
             </div>
             <div class="btn">
@@ -95,6 +109,9 @@
                 <li>예약 확정</li>
               </ul>
               <div class="schedule1">
+                <span class="material-symbols-outlined" style="font-size: 15px;">
+                  calendar_today
+                  </span>
                 <span>2025-05-12 ~ 2025-05-15</span>
               </div>
               <div class="na1">
@@ -116,10 +133,12 @@
                   <li>예약 확정</li>
                 </ul>
               <div class="schedule2">
+                <span class="material-symbols-outlined" style="font-size: 15px;">
+                  calendar_today
+                  </span>
                 <span>2025-05-12 ~ 2025-05-15</span>
               </div>
               <div class="na2">
-                <img>
                 OOO시터
               </div>
               <div class="price2">
@@ -145,17 +164,17 @@
                   <li>등록된 반려동물 정보입니다.</li>
                 </ul>
                 <div class="care">
-                  <a href="">관리</a>
+                  <a href="javascript:void(0)">관리</a>
                 </div>
               <div class="pro1">
-                <img src="" alt="">
+                <img src="../../asset/1.jpg" alt="">
                 <ul>
                   <li>이름</li>
                   <li>포메라니안 / 2세 / 3.5KG</li>
                 </ul>
               </div>
               <div class="pro2">
-                <img src="" alt="">
+                <img src="../../asset/1.jpg" alt="">
                 <ul>
                   <li>이름</li>
                   <li>골든두들 / 4세 / 25KG</li>
@@ -171,27 +190,37 @@
                 </ul>
               </div>
               <div class="sit-name1">
-                <img src="" alt="">
+                <img src="../../asset/sitter1.jpg" alt="">
                 <ul>
                   <li>이름</li>
+                  <span class="material-symbols-outlined" style="font-size: 18px;">
+                    star
+                    </span>
                   <li>4.8점</li>
                   <li>호텔링,산책</li>
                   <li>2025-03-14 이용</li>
                 </ul>
-                <a href="">채팅</a>
+                <div class="chat1">
+                  <a href="javascript:void(0)">채팅</a>
+                </div>
               </div>
               <div class="sit-name2">
-                <img src="" alt="">
+                <img src="../../asset/sitter1.jpg" alt="">
                 <ul>
                   <li>이름</li>
+                  <span class="material-symbols-outlined" style="font-size: 18px;">
+                    star
+                    </span>
                   <li>3.9점</li>
                   <li>호텔링,산책</li>
                   <li>2025-04-19 이용</li>
                 </ul>
-                <a href="">채팅</a>
+                <div class="chat2">
+                  <a href="javascript:void(0)">채팅</a>
+                </div>
               </div>
               <div class="res3">
-                <a href="">새 예약하기</a>
+                <a href="javascript:void(0)">새 예약하기</a>
               </div>
             </div>
           </div>
