2025-05-16 / 전 페이지 타임리프 적용 완료 / 로그인 api작업중

--- a/static/html/common/header.html
+++ b/static/html/common/header.html
@@ -8,7 +8,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li class="menu-service">
+                <li class="menu-service list">
                     <a href="#">Service</a>
                     <ul class="sub-menu">
                         <li class="sub-item"><a href="#">Day Care</a></li>
@@ -16,8 +16,8 @@
                         <li class="sub-item"><a href="#">work with pet</a></li>
                     </ul>
                 </li>
-                <li><a href="#">place</a></li>
-                <li><a href="#">board</a></li>
+                <li class="list"><a href="#">place</a></li>
+                <li class="list"><a href="#">board</a></li>
             </ul>
         </div>
         <div class="sign">
