--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -56,7 +56,7 @@
           <!-- chart1 -->
           <div class="produce">
             <div class="name">
-              <img src="../../asset/1.jpg">
+              <img src="../../asset/dog1.jpg">
               <span>안녕하세요, OOO님!</span>
               <ul>
                 <li>오늘도 반려견과 행복한 하루 되세요</li>
@@ -168,14 +168,14 @@
                   <a href="javascript:void(0)">관리</a>
                 </div>
               <div class="pro1">
-                <img src="../../asset/1.jpg" alt="">
+                <img src="../../asset/dog1.jpg" alt="">
                 <ul>
                   <li>이름</li>
                   <li>포메라니안 / 2세 / 3.5KG</li>
                 </ul>
               </div>
               <div class="pro2">
-                <img src="../../asset/1.jpg" alt="">
+                <img src="../../asset/dog1.jpg" alt="">
                 <ul>
                   <li>이름</li>
                   <li>골든두들 / 4세 / 25KG</li>
