--- a/static/html/mypage/sitterpage.html
+++ b/static/html/mypage/sitterpage.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="../../css/style.css" />
     <link rel="stylesheet" href="../../css/header.css" />
     <link rel="stylesheet" href="../../css/footer.css" />
+    <link rel="stylesheet" href="../../css/mypage/sitterpage.css" />
+    <!-- goole icon -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
 
   <body>
@@ -48,7 +54,211 @@
         <div class="pagew">
           <!-- 작업 영역 -->
           <div class="content">
-            <span class="title">title</span>
+            <!-- chart1 -->
+            <div class="produce">
+              <div class="name">
+                <div class="dog1"><img src="../../asset/dog1.jpg" /></div>
+                <span>반갑습니다, LEE시터님!</span>
+                <ul>
+                  <li>오늘도 반려동물에게 즐거운 하루를 선사해 주세요</li>
+                  <!-- <span class="material-symbols-outlined"> favorite </span> -->
+                </ul>
+              </div>
+              <div class="review">
+                <span class="material-symbols-outlined" style="font-size: 16px">
+                  star
+                </span>
+                <span>작성한 리뷰 : *건</span>
+              </div>
+              <div class="reserving">
+                <span class="material-symbols-outlined" style="font-size: 15px">
+                  calendar_today
+                </span>
+                <span>진행 중인 예약 : *건</span>
+              </div>
+              <div class="payment-amount">
+                <span class="material-symbols-outlined" style="font-size: 15px">
+                  credit_card
+                </span>
+                <span>이 달 금액 : *원</span>
+              </div>
+              <div class="btn">
+                <div class="pro-setting">
+                  <a href="">프로필 관리</a>
+                </div>
+                <div class="pay-amount">
+                  <a href="">결제 내역</a>
+                </div>
+              </div>
+              <!-- chart2 -->
+            </div>
+            <div class="reserve">
+              <div class="reserv">
+                <span>진행중인 예약</span>
+                <ul>
+                  <li>현재 진행 중이거나 예정된 예약 내역입니다.</li>
+                </ul>
+              </div>
+              <div class="res1">
+                <ul>
+                  <li>데이케어</li>
+                  <li>예약 확정</li>
+                </ul>
+                <div class="schedule1">
+                  <span
+                    class="material-symbols-outlined"
+                    style="font-size: 15px"
+                  >
+                    calendar_today
+                  </span>
+                  <span>2025-05-15</span>
+                </div>
+                <div class="dog2"><img src="../../asset/dog2.jpg" /></div>
+                <div class="na1">이름 : 백구</div>
+                <div class="price1">케어 비용 : 70,000원</div>
+                <div class="time1">이용 시간 : 8시간</div>
+                <div class="serv1">이용 할 서비스 : 하루 돌봄(9:00-17:00)</div>
+                <div class="chart1">
+                  <a href="">채팅하기</a>
+                </div>
+                <div class="view1">
+                  <a href="">상세보기</a>
+                </div>
+              </div>
+              <div class="res2">
+                <ul>
+                  <li>산책</li>
+                  <li>예약 미정</li>
+                </ul>
+                <div class="schedule2">
+                  <span
+                    class="material-symbols-outlined"
+                    style="font-size: 15px"
+                  >
+                    calendar_today
+                  </span>
+                  <span>2025-05-12</span>
+                </div>
+                <div class="dog3"><img src="../../asset/dog3.jpg" /></div>
+                <div class="na2">이름 : 모과</div>
+                <div class="price2">케어 비용 : 25,000원</div>
+                <div class="time2">이용 시간 : 10시</div>
+                <div class="serv2">이용 할 서비스 : 산책 (1시간)</div>
+                <div class="chart2">
+                  <a href="">채팅하기</a>
+                </div>
+                <div class="view2">
+                  <a href="">상세보기</a>
+                </div>
+              </div>
+              <div class="res3">
+                <ul>
+                  <li>산책</li>
+                  <li>예약 중</li>
+                </ul>
+                <div class="schedule3">
+                  <span
+                    class="material-symbols-outlined"
+                    style="font-size: 15px"
+                  >
+                    calendar_today
+                  </span>
+                  <span>2025-05-30 - 2025-06-30</span>
+                </div>
+                <div class="dog4"><img src="../../asset/dog4.jpg" /></div>
+                <div class="na3">이름 : 숭늉</div>
+                <div class="price3">케어 비용 : 20,000원(총:60만원)</div>
+                <div class="time3">이용 시간 : 매일 7:30</div>
+                <div class="serv3">
+                  이용 할 서비스 : 산책 (30분 실외배변 필수)
+                </div>
+                <div class="chart3">
+                  <a href="">채팅하기</a>
+                </div>
+                <div class="view3">
+                  <a href="">상세보기</a>
+                </div>
+              </div>
+              <div class="res4">
+                <ul>
+                  <li>호텔링</li>
+                  <li>예약 완료</li>
+                </ul>
+                <div class="schedule4">
+                  <span
+                    class="material-symbols-outlined"
+                    style="font-size: 15px"
+                  >
+                    calendar_today
+                  </span>
+                  <span>2025-06-14 - 2025-06-20</span>
+                </div>
+                <div class="dog5"><img src="../../asset/cat.jpg" /></div>
+                <div class="na4">이름 : 푸우</div>
+                <div class="price4">케어 비용 : 200,000원</div>
+                <div class="time4">이용 시간 : 10시(픽업)</div>
+                <div class="serv4">이용 할 서비스 : 호텔링 (7일)</div>
+                <div class="chart4">
+                  <a href="">채팅하기</a>
+                </div>
+                <div class="view4">
+                  <a href="">상세보기</a>
+                </div>
+              </div>
+              <div class="allres">
+                <span>모든 예약 내역 보기</span>
+              </div>
+            </div>
+            <!-- chart3 -->
+            <div class="resend">
+              <div class="end">
+                <span>예약완료</span>
+                <ul>
+                  <li>LEE 시터님의 완료된 예약 내역입니다.</li>
+                </ul>
+              </div>
+              <div class="end-res1">
+                <div class="dog6"><img src="../../asset/dog5.jpg" /></div>
+                <div class="en1">이름 : 설리반</div>
+                <div class="ed1">기간 : 주 3회 산책(6개월)</div>
+                <div class="es1">이용한 서비스 : 산책</div>
+                <div class="char1">
+                  <a href="">후기</a>
+                </div>
+                <div class="rec1">
+                  <a href="">사용 내역 보기</a>
+                </div>
+              </div>
+              <div class="end-res2">
+                <div class="dog7"><img src="../../asset/cat2.jpg" /></div>
+                <div class="en2">이름 : 마이크</div>
+                <div class="ed2">기간 : 2025.03.03</div>
+                <div class="es2">이용한 서비스 : 방문 돌봄</div>
+                <div class="char2">
+                  <a href="">후기</a>
+                </div>
+                <div class="rec2">
+                  <a href="">사용 내역 보기</a>
+                </div>
+              </div>
+              <div class="end-res3">
+                <div class="dog8"><img src="../../asset/dog6.jpg" /></div>
+                <div class="en3">이름 : 부</div>
+                <div class="ed3">기간 : 2025.01.01-08</div>
+                <div class="es3">이용한 서비스 : 호텔링</div>
+                <div class="char3">
+                  <a href="">후기</a>
+                </div>
+                <div class="rec3">
+                  <a href="">사용 내역 보기</a>
+                </div>
+              </div>
+            </div>
+            <!-- chart4 -->
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
         </div>
       </div>
