--- a/static/html/mypage/sitterpage.html
+++ b/static/html/mypage/sitterpage.html
@@ -68,7 +68,7 @@
                 <span class="material-symbols-outlined" style="font-size: 16px">
                   star
                 </span>
-                <span>작성한 리뷰 : *건</span>
+                <span>작성된 후기 : *건</span>
               </div>
               <div class="reserving">
                 <span class="material-symbols-outlined" style="font-size: 15px">
@@ -182,7 +182,7 @@
               <div class="res4">
                 <ul>
                   <li>호텔링</li>
-                  <li>예약 완료</li>
+                  <li>예약 확정</li>
                 </ul>
                 <div class="schedule4">
                   <span
@@ -226,7 +226,7 @@
                   <a href="">후기</a>
                 </div>
                 <div class="rec1">
-                  <a href="">사용 내역 보기</a>
+                  <a href="">사용 내역</a>
                 </div>
               </div>
               <div class="end-res2">
@@ -238,7 +238,7 @@
                   <a href="">후기</a>
                 </div>
                 <div class="rec2">
-                  <a href="">사용 내역 보기</a>
+                  <a href="">사용 내역</a>
                 </div>
               </div>
               <div class="end-res3">
@@ -250,15 +250,24 @@
                   <a href="">후기</a>
                 </div>
                 <div class="rec3">
-                  <a href="">사용 내역 보기</a>
+                  <a href="">사용 내역</a>
+                </div>
+                <div class="section">
+                  <div class="left">
+                    <span class="material-symbols-outlined">
+                      chevron_left
+                    </span>
+                  </div>
+                  <div class="number">1 2 3 4</div>
+                  <div class="right">
+                    <span class="material-symbols-outlined">
+                      chevron_right
+                    </span>
+                  </div>
                 </div>
               </div>
             </div>
             <!-- chart4 -->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
           </div>
         </div>
       </div>
