--- a/static/html/mypage/ownerprofile.html
+++ b/static/html/mypage/ownerprofile.html
@@ -54,7 +54,11 @@
         <div class="pagew">
           <!-- 작업 영역 -->
           <div class="content">
-            
+            <div class="">
+              <div class="">
+                
+              </div>
+            </div>
       <!-- footer영역(템플릿화 예정) -->
       <div class="footer">
         <span>footer</span>
