--- a/static/html/mypage/sitterprofile.html
+++ b/static/html/mypage/sitterprofile.html
@@ -54,9 +54,9 @@
         <div class="pagew">
           <!-- 작업 영역 -->
           <div class="content">
-            <div class="all-porfile">
+            <div class="all-profile">
                 <div class="photo">
-                    <img src="" alt="">
+                    <img src="../../asset/sitter1.jpg">
                     <div>
                         <ul>
                             <a href="javascript:void(0)">사진 변경</a>
@@ -72,15 +72,20 @@
                   </ul>
                 </div>
                 <div class="my-cng">
-                  <div>
-                    <ul>
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                      <li></li>
-                    </ul>
+                  <div class="nom"> 
+                    <span>이름 : </span>
+                  </div>
+                  <div class="loca">
+                    <span>사는 곳 : </span>
+                  </div>
+                  <div class="pr">
+                    <span>자기 소개 : </span>
+                  </div>
+                  <div class="amount">
+                    <span>이용 금액 : </span>
                   </div>
                 </div>
+              </div>
                 <div class=""></div>
                 <div class=""></div>
                 <div class=""></div>
