--- a/static/html/mypage/sitterpage.html
+++ b/static/html/mypage/sitterpage.html
@@ -206,7 +206,20 @@
                 </div>
               </div>
               <div class="allres">
-                <span>모든 예약 내역 보기</span>
+                <div class="left">
+                  <span class="material-symbols-outlined"> chevron_left </span>
+                </div>
+                <div class="number">
+                  <ul>
+                    <li><a href="">1</a></li>
+                    <li><a href="">2</a></li>
+                    <li><a href="">3</a></li>
+                    <li><a href="">4</a></li>
+                  </ul>
+                </div>
+                <div class="right">
+                  <span class="material-symbols-outlined"> chevron_right </span>
+                </div>
               </div>
             </div>
             <!-- chart3 -->
@@ -225,9 +238,6 @@
                 <div class="char1">
                   <a href="">후기</a>
                 </div>
-                <div class="rec1">
-                  <a href="">사용 내역</a>
-                </div>
               </div>
               <div class="end-res2">
                 <div class="dog7"><img src="../../asset/cat2.jpg" /></div>
@@ -236,9 +246,6 @@
                 <div class="es2">이용한 서비스 : 방문 돌봄</div>
                 <div class="char2">
                   <a href="">후기</a>
-                </div>
-                <div class="rec2">
-                  <a href="">사용 내역</a>
                 </div>
               </div>
               <div class="end-res3">
@@ -249,16 +256,20 @@
                 <div class="char3">
                   <a href="">후기</a>
                 </div>
-                <div class="rec3">
-                  <a href="">사용 내역</a>
-                </div>
                 <div class="section">
                   <div class="left">
                     <span class="material-symbols-outlined">
                       chevron_left
                     </span>
                   </div>
-                  <div class="number">1 2 3 4</div>
+                  <div class="number">
+                    <ul>
+                      <li><a href="">1</a></li>
+                      <li><a href="">2</a></li>
+                      <li><a href="">3</a></li>
+                      <li><a href="">4</a></li>
+                    </ul>
+                  </div>
                   <div class="right">
                     <span class="material-symbols-outlined">
                       chevron_right
