--- a/static/html/mypage/sitterprofile.html
+++ b/static/html/mypage/sitterprofile.html
@@ -55,34 +55,74 @@
           <!-- 작업 영역 -->
           <div class="content">
             <div class="all-profile">
-                <div class="photo">
-                    <img src="../../asset/sitter1.jpg">
-                    <div>
-                        <ul>
-                            <a href="javascript:void(0)">사진 변경</a>
-                            <a href="javascript:void(0)">변경 완료</a>
-                        </ul>
-                    </div>
-                </div>
-                <div class="pw-cng">
+              <div class="care-prof">
+                <ul>
+                  <li>프로필 관리</li>
+                </ul>
+              </div>
+              <div class="photo">
+                <img src="">
+                <div class="clear">
                   <ul>
-                    <li>지금 현재 사용하고 있는 비밀번호</li>
-                    <li>변경 하고 싶은 비밀번호</li>
-                    <li>변경 한 비밀번호 다시 입력</li>
+                    <li>
+                      <a href="">사진 변경</a>
+                    </li>
+                    <li>
+                      <a href="">변경 완료</a>
+                    </li>
                   </ul>
                 </div>
-                <div class="my-cng">
-                  <div class="nom"> 
-                    <span>이름 : </span>
-                  </div>
-                  <div class="loca">
-                    <span>사는 곳 : </span>
-                  </div>
-                  <div class="pr">
-                    <span>자기 소개 : </span>
-                  </div>
-                  <div class="amount">
-                    <span>이용 금액 : </span>
+              </div>
+                <div class="cng">
+                  
+                  <!-- <div class="pw-cng">
+                    <ul>
+                      <li>지금 현재 사용하고 있는 비밀번호</li>
+                      <li>변경 하고 싶은 비밀번호</li>
+                      <li>변경 한 비밀번호 다시 입력</li>
+                    </ul>
+                  </div> -->
+                  <div class="my-cng">
+                    <div class="na-cng">
+                      <ul>
+                        <li>이름 : </li>
+                        <li>구자경</li>
+                      </ul>
+                    </div>
+                    <div class="loca">
+                      <ul>
+                        <li>주소 : </li>
+                        <li>대구 남구 중앙대로40길 </li>
+                      </ul>
+                      <ul>
+                        <li class="ad">
+                          <a href="">수정</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="numb">
+                      <ul>
+                        <li>전화번호 : </li>
+                        <li>010-0000-1111</li>
+                      </ul>
+                    </div>
+                    <div class="amount">
+                      <ul>
+                        <li>이용금액 : </li>
+                        <li>산책 : 시간당 2만원 부터 </li>
+                        <li>호텔링 : 하루 5만원 </li>
+                        <li>데이케어 : 시간당 1.5만원 부터 </li>
+                      </ul>
+                    </div>
+                    <div class="pr">
+                      <ul>
+                        <li>자기소개 : </li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
