--- a/static/html/mypage/ownerpage.html
+++ b/static/html/mypage/ownerpage.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../../css/header.css" />
     <link rel="stylesheet" href="../../css/footer.css" />
     <link rel="stylesheet" href="../../css/mypage/ownerpage.css" />
+    <!-- JS -->
+    <script src="/static/js/mypage/ownerpage.js"></script>
 
     <!-- goole icon -->
     <link
@@ -90,10 +92,23 @@
               </div>
               <div class="btn">
                 <div class="pro-setting">
-                  <a href="">프로필 관리</a>
+                  <a href="/html/mypage/ownerprofile.html">프로필 관리</a>
                 </div>
                 <div class="pay-amount">
-                  <a href="">결제 내역</a>
+                  <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
+                  <!--  -->
                 </div>
               </div>
               <!-- chart2 -->
@@ -123,9 +138,35 @@
                 <div class="price1">120,000원</div>
                 <div class="chart1">
                   <a href="">채팅하기</a>
+                                    <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
                 </div>
                 <div class="view1">
                   <a href="">상세보기</a>
+                                    <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="res2">
@@ -146,9 +187,35 @@
                 <div class="price2">25,000원</div>
                 <div class="chart2">
                   <a href="">채팅하기</a>
+                                    <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
                 </div>
                 <div class="view2">
                   <a href="">상세보기</a>
+                                    <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="allres">
@@ -218,6 +285,19 @@
                   </ul>
                   <div class="chat1">
                     <a href="javascript:void(0)">채팅</a>
+                                      <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
                   </div>
                 </div>
                 <div class="sit-name2">
@@ -236,6 +316,19 @@
                   </ul>
                   <div class="chat2">
                     <a href="javascript:void(0)">채팅</a>
+                                      <!-- 모달 버튼 -->
+                  <button id="modalBtn">결제 내역</button>
+                  <!-- 모달 창 -->
+                  <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="close" id="closeBtn">&times;</span>
+                      <p>모달 내용이 여기에 들어갑니다.</p>
+                      <p>
+                        사용자가 원하는대로 해당 엘리먼트 부분을 수정하여 사용할
+                        수 있습니다.
+                      </p>
+                    </div>
+                  </div>
                   </div>
                 </div>
                 <div class="res3">
