--- a/static/html/mypage/sitterpage.html
+++ b/static/html/mypage/sitterpage.html
@@ -57,7 +57,7 @@
             <!-- chart1 -->
             <div class="produce">
               <div class="name">
-                <div class="dog1"><img src="../../asset/dog1.jpg" /></div>
+                <div class="dog1"><img src="../../asset/sitter2.jpg" /></div>
                 <span>반갑습니다, LEE시터님!</span>
                 <ul>
                   <li>오늘도 반려동물에게 즐거운 하루를 선사해 주세요</li>
@@ -84,7 +84,7 @@
               </div>
               <div class="btn">
                 <div class="pro-setting">
-                  <a href="">프로필 관리</a>
+                  <a href="/html/mypage/sitterprofile.html">프로필 관리</a>
                 </div>
                 <div class="pay-amount">
                   <a href="">결제 내역</a>
